cabal-version:       >=1.10

name:                handles
version:             0.1.0.0
synopsis:            TODO synposis
license-file:        LICENSE
author:              Stefan Matting
maintainer:          stefan.matting@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-extensions
  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns
    NoImplicitPrelude

executable handles
  main-is:             src/Main.hs
  build-depends:
        base
      , handles
  default-language:    Haskell2010

  other-modules:
     Paths_handles
  

library
  hs-source-dirs:
    src/

  exposed-modules:
    Toy.Lib
    Toy.UserService
    Toy.UserService.Remote
    Toy.Types
    Toy.Logger

  other-modules:
    Paths_handles

  build-depends:
      base
    , text
    , containers
    , filepath
    , directory
    , bytestring
    , extra
    , aeson
    , mtl
    , easy-file
    , parser-combinators
    , optparse-applicative
    , rio
    , data-has
    , unliftio

  default-language:    Haskell2010

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns
    NoImplicitPrelude
    FlexibleContexts
  
